# csnake

./: CMakeLists.txt  main.c  main_ncurses.c
lib/: CMakeLists.txt  snake.c  snake.h
lib/screens/: CMakeLists.txt  gtk_screen.c  gtk_screen.h  gui_screen.c  gui_screen.h  ncurses_screen.c  ncurses_screen.h  screen.h
